--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Evaluate context utilisation of LLMs",
   "main": "index.js",
   "scripts": {
-    "start": "node attention.js"
+    "start": "node src/main.js"
   },
   "author": "",
   "license": "ISC",
