--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Evaluate context utilisation of LLMs",
   "main": "index.js",
   "scripts": {
-    "start": "node src/main.js"
+    "start": "node src/main.js",
+    "generate-chart": "node src/chart.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "js-levenshtein": "^1.1.6",
     "openai": "^3.3.0",
     "prompts": "^2.4.2",
+    "puppeteer": "^21.5.1",
     "unique-names-generator": "^4.7.1"
   }
 }
