--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.5.6",
     "@anthropic-ai/tokenizer": "^0.0.4",
+    "@mistralai/mistralai": "^0.0.7",
     "dotenv": "^16.3.1",
     "gpt-tokenizer": "^2.1.2",
     "js-levenshtein": "^1.1.6",
